# cprimitive

./: .gitignore  CMakeLists.txt  Vadd.cl  config.h  image.c  image.h  line.c  line.h  log.h  main.c  rasterizer.c  rasterizer.h  shape.c  shape.h  test_line.c  test_opencl.cc  test_shape.c  triangle.c  triangle.h  util.c  util.h  xmake.lua
cmake/: macros.cmake
examples/: CMakeLists.txt  render_image.c  xmake.lua
examples/gui/: CMakeLists.txt  minimal.cpp
examples/offscreen/: offscreen.c
gui/: CMakeLists.txt
shaders/: vertex.glsl
test/: CMakeLists.txt  test_line.c  test_rgb2gray.c
