cmake_minimum_required(VERSION 3.10.0)
project(offscreen LANGUAGES C)

find_package(glfw3 CONFIG REQUIRED)
find_package(glad CONFIG REQUIRED)
if(MSVC)
    add_definitions(-D_CRT_SECURE_NO_WARNINGS)
    add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
endif()
include_directories(../)
add_executable(offscreen offscreen.c)
add_executable(renderImage render_image.c)
target_link_libraries(offscreen glfw glad::glad)
target_link_libraries(renderImage glfw glad::glad)
